// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: success, isDisabled: false, isLoading: false and length: 4 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-success);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-success-frosted-soft);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-success);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 1 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 1 2`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 2 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 3 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 4 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 5 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: true and length: 6 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 1 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 2 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 3 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 4 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 5 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 5 2`] = `
":host {
  display: block;
  --_p-pin-code-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(forced-colors:active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false and length: 6 1`] = `
":host {
  display: block;
  --_p-pin-code-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--_p-pin-code-a) * 3.5rem);
  height: calc(var(--_p-pin-code-a) * 3.5rem);
  padding: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-error);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-error-frosted-soft);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/calc(var(--p-leading-normal) + 6px) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),border-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-error);
  }
}

.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--_p-pin-code-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
